--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node + Express IoT Dashboard",
   "main": "app.js",
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "nodemon ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {},
@@ -15,6 +15,8 @@
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
+    "nodemon": "^1.8.0",
+    "redis": "^2.2.5",
     "serve-favicon": "~2.3.0"
   },
   "repository": {
